Minor refactorings induced by IDEA warnings